.metadata/.plugins/org.eclipse.cdt.ui/STK3700_usb_device.build.log
19:01:51 **** Build of configuration GNU ARM v4.8.3 - Debug for project STK3700_usb_device ****
make -j4 all 
Building file: ../src/callbacks.c
Building file: ../src/main_stk.c
Building file: C:/SiliconLabs/SimplicityStudio/v3/developer/sdks/efm32/v2/usb/src/em_usbd.c
Building file: C:/SiliconLabs/SimplicityStudio/v3/developer/sdks/efm32/v2/usb/src/em_usbdch9.c
Invoking: GNU ARM C Compiler
arm-none-eabi-gcc -g -gdwarf-2 -mcpu=cortex-m3 -mthumb '-DSTK=1' '-DEFM32GG990F1024=1' '-DDEBUG=1' -I"C:/SiliconLabs/SimplicityStudio/v3/developer/sdks/efm32/v2/an/an0065_efm32_usb_device" -I"C:/SiliconLabs/SimplicityStudio/v3/developer/sdks/efm32/v2/an/an0065_efm32_usb_device/src" -I"C:/SiliconLabs/SimplicityStudio/v3/developer/sdks/efm32/v2/CMSIS/Include" -I"C:/SiliconLabs/SimplicityStudio/v3/developer/sdks/efm32/v2/emlib/inc" -I"C:/SiliconLabs/SimplicityStudio/v3/developer/sdks/efm32/v2/kits/common/bsp" -I"C:/SiliconLabs/SimplicityStudio/v3/developer/sdks/efm32/v2/kits/common/drivers" -I"C:/SiliconLabs/SimplicityStudio/v3/developer/sdks/efm32/v2/Device/SiliconLabs/EFM32GG/Include" -I"C:/SiliconLabs/SimplicityStudio/v3/developer/sdks/efm32/v2/usb/inc" -I"C:/SiliconLabs/SimplicityStudio/v3/developer/sdks/efm32/v2/kits/EFM32GG_STK3700/config" -O0 -Wall -c -fmessage-length=0 -mno-sched-prolog -fno-builtin -ffunction-sections -fdata-sections -std=c99 -MMD -MP -MF"src/callbacks.d" -MT"src/callbacks.o" -o "src/callbacks.o" "../src/callbacks.c"
Invoking: GNU ARM C Compiler
Invoking: GNU ARM C Compiler
Invoking: GNU ARM C Compiler
arm-none-eabi-gcc -g -gdwarf-2 -mcpu=cortex-m3 -mthumb '-DSTK=1' '-DEFM32GG990F1024=1' '-DDEBUG=1' -I"C:/SiliconLabs/SimplicityStudio/v3/developer/sdks/efm32/v2/an/an0065_efm32_usb_device" -I"C:/SiliconLabs/SimplicityStudio/v3/developer/sdks/efm32/v2/an/an0065_efm32_usb_device/src" -I"C:/SiliconLabs/SimplicityStudio/v3/developer/sdks/efm32/v2/CMSIS/Include" -I"C:/SiliconLabs/SimplicityStudio/v3/developer/sdks/efm32/v2/emlib/inc" -I"C:/SiliconLabs/SimplicityStudio/v3/developer/sdks/efm32/v2/kits/common/bsp" -I"C:/SiliconLabs/SimplicityStudio/v3/developer/sdks/efm32/v2/kits/common/drivers" -I"C:/SiliconLabs/SimplicityStudio/v3/developer/sdks/efm32/v2/Device/SiliconLabs/EFM32GG/Include" -I"C:/SiliconLabs/SimplicityStudio/v3/developer/sdks/efm32/v2/usb/inc" -I"C:/SiliconLabs/SimplicityStudio/v3/developer/sdks/efm32/v2/kits/EFM32GG_STK3700/config" -O0 -Wall -c -fmessage-length=0 -mno-sched-prolog -fno-builtin -ffunction-sections -fdata-sections -std=c99 -MMD -MP -MF"src/main_stk.d" -MT"src/main_stk.o" -o "src/main_stk.o" "../src/main_stk.c"
arm-none-eabi-gcc -g -gdwarf-2 -mcpu=cortex-m3 -mthumb '-DSTK=1' '-DEFM32GG990F1024=1' '-DDEBUG=1' -I"C:/SiliconLabs/SimplicityStudio/v3/developer/sdks/efm32/v2/an/an0065_efm32_usb_device" -I"C:/SiliconLabs/SimplicityStudio/v3/developer/sdks/efm32/v2/an/an0065_efm32_usb_device/src" -I"C:/SiliconLabs/SimplicityStudio/v3/developer/sdks/efm32/v2/CMSIS/Include" -I"C:/SiliconLabs/SimplicityStudio/v3/developer/sdks/efm32/v2/emlib/inc" -I"C:/SiliconLabs/SimplicityStudio/v3/developer/sdks/efm32/v2/kits/common/bsp" -I"C:/SiliconLabs/SimplicityStudio/v3/developer/sdks/efm32/v2/kits/common/drivers" -I"C:/SiliconLabs/SimplicityStudio/v3/developer/sdks/efm32/v2/Device/SiliconLabs/EFM32GG/Include" -I"C:/SiliconLabs/SimplicityStudio/v3/developer/sdks/efm32/v2/usb/inc" -I"C:/SiliconLabs/SimplicityStudio/v3/developer/sdks/efm32/v2/kits/EFM32GG_STK3700/config" -O0 -Wall -c -fmessage-length=0 -mno-sched-prolog -fno-builtin -ffunction-sections -fdata-sections -std=c99 -MMD -MP -MF"emusb/em_usbd.d" -MT"emusb/em_usbd.o" -o "emusb/em_usbd.o" "C:/SiliconLabs/SimplicityStudio/v3/developer/sdks/efm32/v2/usb/src/em_usbd.c"
arm-none-eabi-gcc -g -gdwarf-2 -mcpu=cortex-m3 -mthumb '-DSTK=1' '-DEFM32GG990F1024=1' '-DDEBUG=1' -I"C:/SiliconLabs/SimplicityStudio/v3/developer/sdks/efm32/v2/an/an0065_efm32_usb_device" -I"C:/SiliconLabs/SimplicityStudio/v3/developer/sdks/efm32/v2/an/an0065_efm32_usb_device/src" -I"C:/SiliconLabs/SimplicityStudio/v3/developer/sdks/efm32/v2/CMSIS/Include" -I"C:/SiliconLabs/SimplicityStudio/v3/developer/sdks/efm32/v2/emlib/inc" -I"C:/SiliconLabs/SimplicityStudio/v3/developer/sdks/efm32/v2/kits/common/bsp" -I"C:/SiliconLabs/SimplicityStudio/v3/developer/sdks/efm32/v2/kits/common/drivers" -I"C:/SiliconLabs/SimplicityStudio/v3/developer/sdks/efm32/v2/Device/SiliconLabs/EFM32GG/Include" -I"C:/SiliconLabs/SimplicityStudio/v3/developer/sdks/efm32/v2/usb/inc" -I"C:/SiliconLabs/SimplicityStudio/v3/developer/sdks/efm32/v2/kits/EFM32GG_STK3700/config" -O0 -Wall -c -fmessage-length=0 -mno-sched-prolog -fno-builtin -ffunction-sections -fdata-sections -std=c99 -MMD -MP -MF"emusb/em_usbdch9.d" -MT"emusb/em_usbdch9.o" -o "emusb/em_usbdch9.o" "C:/SiliconLabs/SimplicityStudio/v3/developer/sdks/efm32/v2/usb/src/em_usbdch9.c"
In file included from ../src/main_stk.c:42:0:
C:/SiliconLabs/SimplicityStudio/v3/developer/sdks/efm32/v2/an/an0065_efm32_usb_device/src/descriptors.h:48:25: error: 'USB_EP0_SIZE' undeclared here (not in a function)
   .bMaxPacketSize0    = USB_EP0_SIZE,                   /* Max packet size for EP0 */
                         ^
C:/SiliconLabs/SimplicityStudio/v3/developer/sdks/efm32/v2/an/an0065_efm32_usb_device/src/descriptors.h:100:3: error: 'USB_MAX_EP_SIZE' undeclared here (not in a function)
   USB_MAX_EP_SIZE,                      /* wMaxPacketSize (LSB) */
   ^
make: *** [src/main_stk.o] Error 1
make: *** Waiting for unfinished jobs....
Finished building: ../src/callbacks.c
Finished building: C:/SiliconLabs/SimplicityStudio/v3/developer/sdks/efm32/v2/usb/src/em_usbdch9.c
Finished building: C:/SiliconLabs/SimplicityStudio/v3/developer/sdks/efm32/v2/usb/src/em_usbd.c
 
 
 

19:01:55 Build Finished (took 4s.327ms)

